local/logs/project.log
2020-02-06T04:01:15.670Z - normal: Load ~/.CocosCreator/settings.json
2020-02-06T04:01:15.710Z - normal: Initializing Asset Database
2020-02-06T04:01:15.711Z - normal: checking language setting...
2020-02-06T04:01:15.711Z - normal: Language: zh
2020-02-06T04:01:16.009Z - success: preview server running at http://localhost:7456
2020-02-06T04:01:16.012Z - success: protocol editor-framework registered
2020-02-06T04:01:16.012Z - success: protocol app registered
2020-02-06T04:01:16.012Z - success: protocol theme registered
2020-02-06T04:01:16.012Z - success: protocol packages registered
2020-02-06T04:01:16.012Z - success: protocol uuid registerred
2020-02-06T04:01:16.012Z - success: protocol db registerred
2020-02-06T04:01:16.012Z - success: protocol thumbnail registerred
2020-02-06T04:01:16.013Z - success: protocol unpack registerred
2020-02-06T04:01:16.013Z - success: protocol disable-commonjs registerred
2020-02-06T04:01:16.420Z - normal: connected!
2020-02-06T04:01:16.423Z - normal: Check project C:\Users\user\Desktop\cocos\start_project
2020-02-06T04:01:16.429Z - normal: Initializing project C:\Users\user\Desktop\cocos\start_project
2020-02-06T04:01:16.464Z - success: adapters loaded
2020-02-06T04:01:16.466Z - success: asset-db-debugger loaded
2020-02-06T04:01:16.520Z - success: fb-audience-network loaded
2020-02-06T04:01:16.540Z - success: fb-live-stream loaded
2020-02-06T04:01:16.542Z - success: google-play-instant loaded
2020-02-06T04:01:16.545Z - success: huawei-runtime loaded
2020-02-06T04:01:16.546Z - success: jkw-adapter loaded
2020-02-06T04:01:16.547Z - success: jsb-adapter loaded
2020-02-06T04:01:16.550Z - success: oppo-runtime loaded
2020-02-06T04:01:16.552Z - success: package-manager loaded
2020-02-06T04:01:16.554Z - success: runtime-dev-tools loaded
2020-02-06T04:01:16.557Z - success: sdkbox loaded
2020-02-06T04:01:16.559Z - success: ui-kit-preview-extra loaded
2020-02-06T04:01:16.561Z - success: ui-kit-preview loaded
2020-02-06T04:01:16.565Z - success: vivo-runtime loaded
2020-02-06T04:01:16.567Z - success: alipay-minigame loaded
2020-02-06T04:01:16.600Z - success: assets loaded
2020-02-06T04:01:16.603Z - success: baidugame-opendata loaded
2020-02-06T04:01:16.604Z - success: baidugame loaded
2020-02-06T04:01:16.606Z - success: builder loaded
2020-02-06T04:01:16.703Z - success: cocos-services loaded
2020-02-06T04:01:16.705Z - success: console loaded
2020-02-06T04:01:16.713Z - success: fb-instant-games loaded
2020-02-06T04:01:16.714Z - success: game-window loaded
2020-02-06T04:01:16.715Z - success: google-instant-games loaded
2020-02-06T04:01:16.717Z - success: hierarchy loaded
2020-02-06T04:01:16.719Z - success: inspector loaded
2020-02-06T04:01:16.916Z - success: cpk-publish loaded
2020-02-06T04:01:16.921Z - success: keystore loaded
2020-02-06T04:01:16.927Z - success: node-library loaded
2020-02-06T04:01:16.928Z - success: open-recent-items loaded
2020-02-06T04:01:16.929Z - success: package-asset loaded
2020-02-06T04:01:16.930Z - success: preferences loaded
2020-02-06T04:01:16.930Z - success: project-exporter loaded
2020-02-06T04:01:16.932Z - success: project-importer loaded
2020-02-06T04:01:16.933Z - success: project-settings loaded
2020-02-06T04:01:16.935Z - success: scene loaded
2020-02-06T04:01:16.936Z - success: simulator-debugger loaded
2020-02-06T04:01:16.937Z - success: sprite-editor loaded
2020-02-06T04:01:16.938Z - success: store loaded
2020-02-06T04:01:16.940Z - success: timeline loaded
2020-02-06T04:01:16.942Z - success: wechatgame-opendata loaded
2020-02-06T04:01:16.945Z - success: wechatgame loaded
2020-02-06T04:01:16.947Z - success: xiaomi-runtime loaded
2020-02-06T04:01:17.525Z - normal: Initializing Cocos2d
2020-02-06T04:01:17.836Z - normal: Initializing engine extends
2020-02-06T04:01:20.059Z - info: Cocos Service load base data!
2020-02-06T04:01:20.727Z - normal: Loading packages
2020-02-06T04:01:20.732Z - normal: Watching packages
2020-02-06T04:01:21.188Z - normal: Run Application
2020-02-06T04:23:51.099Z - info: ee93e3bf-2ba2-4f4a-958d-85ceaa61fc4a (eek+O/K6JPSpWNhc6qYfxK), db://assets/stripts/Player.js
2020-02-07T06:53:17.717Z - failed: [db-task][sync-changes] Failed to import asset C:\Users\user\Desktop\cocos\start_project\assets\stripts\Star.js, message: Compile error: SyntaxError: C:/Users/user/Desktop/cocos/start_project/assets/stripts/Star.js: Unexpected token, expected , (49:86)
  47 |     var opacityRatio = 1 - this.game.timer / this.game.starDuration;
  48 |     var minOpacity = 50;
> 49 |     console.log('opacity: ',minOpacity + Math.floor(opacityRatio * (255 - minOpacity));)
     |                                                                                       ^
  50 |     this.node.opacity = minOpacity + Math.floor(opacityRatio * (255 - minOpacity));
  51 |   }
  52 | });
    at Parser.pp$5.raise (C:\CocosCreator_2.2.1\resources\app.asar\node_modules\babylon\lib\index.js:4454:13)
    at Parser.pp.unexpected (C:\CocosCreator_2.2.1\resources\app.asar\node_modules\babylon\lib\index.js:1761:8)
    at Parser.pp.expect (C:\CocosCreator_2.2.1\resources\app.asar\node_modules\babylon\lib\index.js:1749:33)
    at Parser.pp$3.parseCallExpressionArguments (C:\CocosCreator_2.2.1\resources\app.asar\node_modules\babylon\lib\index.js:3564:12)
    at Parser.pp$3.parseSubscripts (C:\CocosCreator_2.2.1\resources\app.asar\node_modules\babylon\lib\index.js:3533:31)
    at Parser.pp$3.parseExprSubscripts (C:\CocosCreator_2.2.1\resources\app.asar\node_modules\babylon\lib\index.js:3504:15)
    at Parser.pp$3.parseMaybeUnary (C:\CocosCreator_2.2.1\resources\app.asar\node_modules\babylon\lib\index.js:3474:19)
    at Parser.pp$3.parseExprOps (C:\CocosCreator_2.2.1\resources\app.asar\node_modules\babylon\lib\index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (C:\CocosCreator_2.2.1\resources\app.asar\node_modules\babylon\lib\index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (C:\CocosCreator_2.2.1\resources\app.asar\node_modules\babylon\lib\index.js:3344:19)
